--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div id="container">
     <div id="profile">
-        <img src="./assets/Avatar.png" alt="foto de Myke Brito sorrindo"
+        <img src="./assets/avatar.png" 
 
     />
     <p>@maykebrito</p>
